--- a/style.css
+++ b/style.css
@@ -203,3 +203,37 @@ font-weight: 400;
 .coming-soon-rpart img{
     margin-top: 45px;
 }
+
+.portfolio-container{
+    width: 1320px;
+    margin: auto;
+}
+
+.portfolio-title{
+    color: #F00;
+font-size: 24px;
+font-weight: 500;
+padding-top: 120px;
+}
+
+.portfolio-head{
+    color: #070211;
+font-size: 48px;
+font-weight: 900;
+padding-top: 15px;
+}
+
+.portfolio-description{
+    color: rgba(7, 2, 17, 0.60);
+font-size: 20px;
+font-weight: 400;
+padding-top: 20px;
+}
+
+.portfolio-images-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 25px;
+    margin: 45px auto 0 auto;
+}
