--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-    font-family: 'Merriweather',
-        serif;
+    font-family: 'Inter', sans-serif;
+font-family: 'Merriweather', serif;
 }
 
 * {
@@ -26,7 +26,7 @@ header {
 }
 
 .banner-container h4 {
-    color: #FFF;
+    color: white;
     text-align: center;
     font-size: 32px;
     font-weight: 400;
@@ -108,8 +108,15 @@ header {
 }
 
 #btn {
-    padding-left: 160px;
-    padding-top: 50px;
+    border: none;
+    border-radius: 8px;
+    background: #F00;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 16px 32px;
+    margin-left: 130px;
+    width: 100px;
 }
 
 .new {
@@ -129,7 +136,6 @@ header {
     gap: 30px;
     align-items: center;
     justify-content: center;
-    border: 1px solid rgb(13, 255, 0);
 
 }
 
@@ -156,84 +162,207 @@ header {
     align-items: center;
     margin: 0 auto;
     width: 1320px;
-height: 482px;
-border: 1px solid red;
+    height: 482px;
 }
 
-.coming-soon-head{
+.coming-soon-head {
     color: #F00;
-font-size: 24px;
-font-weight: 500;
-padding-top: 10px;
-padding-bottom: 16px;
+    font-size: 24px;
+    font-weight: 500;
+    padding-top: 10px;
+    padding-bottom: 16px;
 }
 
-.coming-soon-title{
+.coming-soon-title {
     color: #070211;
-font-size: 48px;
-font-weight: 900;
-padding-bottom: 16px;
+    font-size: 48px;
+    font-weight: 900;
+    padding-bottom: 16px;
 }
 
-.coming-soon-description{
+.coming-soon-description {
     color: rgba(7, 2, 17, 0.60);
-font-size: 20px;
-font-weight: 400;
+    font-size: 20px;
+    font-weight: 400;
 }
-.coming-soon-lpart img{
+
+.coming-soon-lpart img {
     border-radius: 463px;
-border: 15px solid #F00;
-padding: 45px;
+    border: 15px solid #F00;
+    padding: 45px;
 }
 
-.coming-soon-rhead{
+.coming-soon-rhead {
     color: #F00;
-font-size: 48px;
-font-weight: 700;
-margin-top: 130px;
-padding-bottom: 10px;
+    font-size: 48px;
+    font-weight: 700;
+    margin-top: 130px;
+    padding-bottom: 10px;
 }
 
-.coming-soon-rdescription{
+.coming-soon-rdescription {
     color: rgba(7, 2, 17, 0.60);
-font-size: 20px;
-font-weight: 400;
+    font-size: 20px;
+    font-weight: 400;
 }
 
-.coming-soon-rpart img{
+.coming-soon-rpart img {
     margin-top: 45px;
 }
 
-.portfolio-container{
+.portfolio-container {
     width: 1320px;
     margin: auto;
 }
 
-.portfolio-title{
+.portfolio-title {
     color: #F00;
-font-size: 24px;
-font-weight: 500;
-padding-top: 120px;
+    font-size: 24px;
+    font-weight: 500;
+    padding-top: 120px;
+    margin: auto;
 }
 
-.portfolio-head{
+.portfolio-head {
     color: #070211;
-font-size: 48px;
-font-weight: 900;
-padding-top: 15px;
+    font-size: 48px;
+    font-weight: 900;
+    margin: auto;
+    padding-top: 15px;
 }
 
-.portfolio-description{
+.portfolio-description {
     color: rgba(7, 2, 17, 0.60);
-font-size: 20px;
-font-weight: 400;
-padding-top: 20px;
+    font-size: 20px;
+    font-weight: 400;
+    padding-top: 20px;
 }
 
-.portfolio-images-container{
+.portfolio-images-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 25px;
     margin: 45px auto 0 auto;
+}
+
+.portfolio-first-image:hover{
+    border: 2px solid red;
+    border-radius: 20px;
+}
+.portfolio-second-image:hover{
+    border: 2px solid blue;
+    border-radius: 20px;
+}
+.portfolio-third-image:hover{
+    border: 2px solid black;
+    border-radius: 20px;
+}
+.portfolio-fourth-image:hover{
+    border: 2px solid black;
+    border-radius: 20px;
+}
+.portfolio-fifth-image:hover{
+    border: 2px solid red;
+    border-radius: 20px;
+}
+.portfolio-sixth-image:hover{
+    border: 2px solid blue;
+    border-radius: 20px;
+}
+
+.newsletter-container {
+    max-width: 1320px;
+    height: 616px;
+    margin: 120px auto 0 auto;
+    border-radius: 16px;
+    background: rgba(255, 0, 0, 0.05);
+    text-align: center;
+}
+
+.newsletter-img {
+    padding-top: 80px;
+}
+
+.newsletter-title {
+    color: #070211;
+    font-size: 48px;
+    font-weight: 900;
+    padding-top: 40px;
+}
+
+.newsletter-description {
+    color: rgba(7, 2, 17, 0.60);
+    font-size: 20px;
+    font-weight: 400;
+    padding-top: 20px;
+
+}
+
+.newsletter-input input {
+    width: 378px;
+    height: 52px;
+    border: 0;
+    border-radius: 50px 0px 0 50px;
+    background: #FFF;
+    margin-top: 45px;
+}
+
+.newsletter-input button {
+    width: 210px;
+    height: 52px;
+    border: 0;
+    border-radius: 0px 50px 50px 0px;
+    background: #F00;
+}
+
+.newsletter-input ::placeholder {
+    padding-left: 30px;
+    color: rgba(7, 2, 17, 0.30);
+    font-size: 18px;
+    font-weight: 400;
+}
+
+footer {
+    width: 1600px;
+    height: 609px;
+    background: #070211;
+    margin-top: 120px;
+}
+
+footer hr {
+    width: 1320px;
+    background: #070211;
+    margin: 45px auto auto auto;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+    width: 1320px;
+    color: #FFF;
+    font-size: 20px;
+    font-weight: 400;
+    padding-top: 120px;
+
+}
+
+.social-icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 45px;
+    gap: 24px;
+}
+
+.copyright-container {
+    display: flex;
+    justify-content: space-between;
+    width: 1320px;
+    margin: auto;
+    color: #FFF;
+    font-size: 20px;
+    font-weight: 400;
+    padding-top: 50px;
 }
